--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "d3-selection": "^1.3.0",
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.6",
+    "d3-time": "^1.0.8",
     "d3-transition": "^1.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
